SERVER-38038 mongo shell should support all ErrorExtraInfo codes

(cherry picked from commit 33c750267b6481c0d0320d75c94ef755f3e467fe)